src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__regproc__cast_reg_type_to_oid.snap
---
source: src/expr/src/scalar/func/impls/regproc.rs
expression: "#[sqlfunc(\n    sqlname = \"regtypetooid\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastOidToRegType)\n)]\nfn cast_reg_type_to_oid(a: RegType) -> Oid {\n    Oid(a.0)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastRegTypeToOid;
impl crate::func::EagerUnaryFunc for CastRegTypeToOid {
    type Input<'a> = RegType;
    type Output<'a> = Oid;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_reg_type_to_oid(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastOidToRegType)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastRegTypeToOid {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("regtypetooid")
    }
}
fn cast_reg_type_to_oid(a: RegType) -> Oid {
    Oid(a.0)
}
